--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="https://imgs.search.brave.com/r_fSYXW3KEHGUnLWrcS14OOa_vjETVri-mJn02OOJJU/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly90My5m/dGNkbi5uZXQvanBn/LzA3Lzg3LzQxLzE2/LzM2MF9GXzc4NzQx/MTY5M19lR0hmQ3pE/VjliYXdmTWdMc3E0/TEVPRXlyUFVsTUlN/VC5qcGc" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>React App</title>
+  <title>Recipe-Book</title>
 </head>
 
 <body>
